--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,linux,pycharm+all,python,visualstudiocode,jupyternotebooks
+
+*.csv
