--- a/.gitignore
+++ b/.gitignore
@@ -368,3 +368,5 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,linux,pycharm+all,python,visualstudiocode,jupyternotebooks
 
 *.csv
+wandb/
+checkpoint/
